@@ -1,17 +1,17 @@
 /*
- * Copyright 2004-2020 H2 Group. Multiple-Licensed under the MPL 2.0,
+ * Copyright 2004-2025 H2 Group. Multiple-Licensed under the MPL 2.0,
  * and the EPL 1.0 (https://h2database.com/html/license.html).
  * Initial Developer: H2 Group
  */
 package org.h2.mvstore.type;
 
-import org.h2.engine.Constants;
-import org.h2.mvstore.DataUtils;
-import org.h2.mvstore.WriteBuffer;
-
 import java.nio.ByteBuffer;
 import java.util.HashMap;
 import java.util.Map;
+
+import org.h2.engine.Constants;
+import org.h2.mvstore.DataUtils;
+import org.h2.mvstore.WriteBuffer;
 
 /**
  * Class DBMetaType is a type for values in the type registry map.
@@ -24,7 +24,7 @@ public final class MetaType<D> extends BasicDataType<DataType<?>> {
 
     private final D database;
     private final Thread.UncaughtExceptionHandler exceptionHandler;
-    private final Map<String, StatefulDataType.Factory<D>> cache = new HashMap<>();
+    private final Map<String, Object> cache = new HashMap<>();
 
     public MetaType(D database, Thread.UncaughtExceptionHandler exceptionHandler) {
         this.database = database;
@@ -68,20 +68,33 @@ public final class MetaType<D> extends BasicDataType<DataType<?>> {
         int len = DataUtils.readVarInt(buff);
         String className = DataUtils.readString(buff, len);
         try {
-            StatefulDataType.Factory<D> factory = cache.get(className);
-            if (factory != null) {
-                return factory.create(buff, this, database);
+            Object o = cache.get(className);
+            if (o != null) {
+                if (o instanceof StatefulDataType.Factory) {
+                    return ((StatefulDataType.Factory<D>) o).create(buff, this, database);
+                }
+                return (DataType<?>) o;
             }
             Class<?> clazz = Class.forName(className);
-            Object obj = clazz.newInstance();
+            boolean singleton = false;
+            Object obj;
+            try {
+                obj = clazz.getDeclaredField("INSTANCE").get(null);
+                singleton = true;
+            } catch (ReflectiveOperationException | NullPointerException e) {
+                obj = clazz.getDeclaredConstructor().newInstance();
+            }
             if (obj instanceof StatefulDataType.Factory) {
-                factory = (StatefulDataType.Factory<D>) obj;
+                StatefulDataType.Factory<D> factory = (StatefulDataType.Factory<D>) obj;
                 cache.put(className, factory);
                 return factory.create(buff, this, database);
             }
+            if (singleton) {
+                cache.put(className, obj);
+            }
             return (DataType<?>) obj;
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException e) {
-            if(exceptionHandler != null) {
+        } catch (ReflectiveOperationException | SecurityException | IllegalArgumentException e) {
+            if (exceptionHandler != null) {
                 exceptionHandler.uncaughtException(Thread.currentThread(), e);
             }
             throw new RuntimeException(e);
